--- a/main.html
+++ b/main.html
@@ -7,6 +7,19 @@
 </head>
 
 <body>
+
+	<button data-ns-test ="block-inline-button"></button>
+	<div data-ns-test="block-inline-div"></div>
+	<span data-ns-test="block-inline-span"></span>
+	<p data-ns-test="block-inline-p"></p>
+	<input data-ns-test="block-inline-input"></input>
+	<site data-ns-test="block-inline-cite"></site>
+	<code data-ns-test="block-inline-code"></code>
+	<h1 data-ns-test="block-inline-h1"></h1>	
+	<sup data-ns-test="block-inline-sup"></sup>
+	<sub data-ns-test="	block-inline-sub"></sub>	
+
+	
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
