--- a/main.html
+++ b/main.html
@@ -7,18 +7,52 @@
 </head>
 
 <body>
+<div>
+	<button data-ns-test ="block-inline-button">Test1</button>
+	<button data-ns-test ="block-inline-button">Test2</button>
+          Answer: Inline
 
-	<button data-ns-test ="block-inline-button"></button>
-	<div data-ns-test="block-inline-div"></div>
-	<span data-ns-test="block-inline-span"></span>
-	<p data-ns-test="block-inline-p"></p>
-	<input data-ns-test="block-inline-input"></input>
-	<site data-ns-test="block-inline-cite"></site>
-	<code data-ns-test="block-inline-code"></code>
-	<h1 data-ns-test="block-inline-h1"></h1>	
-	<sup data-ns-test="block-inline-sup"></sup>
-	<sub data-ns-test="	block-inline-sub"></sub>	
 
+
+	<div data-ns-test="block-inline-div">Test1</div>
+  <div data-ns-test="block-inline-div">Test2</div> 
+   Answer: Block
+
+
+	<span data-ns-test="block-inline-span">Test1</span>
+     <span data-ns-test="block-inline-span">Test2</span>
+    Answer: Inline
+
+	
+	<p data-ns-test="block-inline-p">Test1</p>
+	<p data-ns-test="block-inline-p">Test2</p>	
+      Answer: Block
+	
+	<input data-ns-test="block-inline-input">Test1</input>
+	<input data-ns-test="block-inline-input">Test2</input>
+	Answer: Inline
+	
+	<site data-ns-test="block-inline-cite">Test1</site>
+	<site data-ns-test="block-inline-cite">Test2</site>
+	Answer: Inline
+	
+	<code data-ns-test="block-inline-code">Test1</code>
+	<code data-ns-test="block-inline-code">Test2</code>
+	Answer: Inline
+	
+	<h1 data-ns-test="block-inline-h1">Test1</h1>	
+	<h1 data-ns-test="block-inline-h1">Test2</h1>
+	Answer: Block
+	
+	<sup data-ns-test="block-inline-sup">Test1</sup>
+	<sup data-ns-test="block-inline-sup">Test2</sup>
+      Answer: Inline
+
+	
+	<sub data-ns-test="	block-inline-sub">Test1</sub>	
+	<sub data-ns-test="	block-inline-sub">Test2</sub>
+	Answer: Inline
+</div>
 	
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
