--- a/main.html
+++ b/main.html
@@ -32,14 +32,14 @@
 	</div>
 
 	<div>
-	<input data-ns-test="block-inline-input">Test1</input>
-	<input data-ns-test="block-inline-input">Test2</input>
+	<input value="Test1" data-ns-test="block-inline-input">
+	<input value="Test2" data-ns-test="block-inline-input">
 	Answer: Inline
 	</div>
 
 	<div>
-	<site data-ns-test="block-inline-cite">Test1</site>
-	<site data-ns-test="block-inline-cite">Test2</site>
+	<cite data-ns-test="block-inline-cite">Test1</site>
+	<cite data-ns-test="block-inline-cite">Test2</site>
 	Answer: Inline
 	</div>
 
