--- a/main.html
+++ b/main.html
@@ -38,8 +38,8 @@
 	</div>
 
 	<div>
-	<cite data-ns-test="block-inline-cite">Test1</site>
-	<cite data-ns-test="block-inline-cite">Test2</site>
+	<cite data-ns-test="block-inline-cite">Test1</cite>
+	<cite data-ns-test="block-inline-cite">Test2</cite>
 	Answer: Inline
 	</div>
 
