--- a/main.html
+++ b/main.html
@@ -32,8 +32,8 @@
 	</div>
 
 	<div>
-	<input value="Test1" data-ns-test="block-inline-input">
-	<input value="Test2" data-ns-test="block-inline-input">
+	<input value="Test1" data-ns-test="block-inline-input">Test1</input>
+	<input value="Test2" data-ns-test="block-inline-input">Test2</input>
 	Answer: Inline
 	</div>
 
